@@ -6,12 +6,12 @@
 
     <groupId>jerryhome</groupId>
     <artifactId>lightcontrol</artifactId>
-    <version>1.2.2</version>
+    <version>1.4.0</version>
 
     <parent>
         <groupId>org.springframework.boot</groupId>
         <artifactId>spring-boot-starter-parent</artifactId>
-        <version>2.0.2.RELEASE</version>
+        <version>2.1.4.RELEASE</version>
     </parent>
 
     <dependencies>
@@ -34,11 +34,52 @@
         </dependency>
 
 
+
+        <dependency>
+            <groupId>javax.xml.bind</groupId>
+            <artifactId>jaxb-api</artifactId>
+            <version>2.3.1</version>
+        </dependency>
+        <dependency>
+            <groupId>com.sun.xml.bind</groupId>
+            <artifactId>jaxb-core</artifactId>
+            <version>2.3.0.1</version>
+        </dependency>
+        <dependency>
+            <groupId>com.sun.xml.bind</groupId>
+            <artifactId>jaxb-impl</artifactId>
+            <version>2.3.2</version>
+        </dependency>
+        <dependency>
+            <groupId>javax.activation</groupId>
+            <artifactId>activation</artifactId>
+            <version>1.1.1</version>
+        </dependency>
+
+
+
+        <dependency>
+            <groupId>org.projectlombok</groupId>
+            <artifactId>lombok</artifactId>
+            <version>1.18.6</version>
+            <scope>provided</scope>
+        </dependency>
         <dependency>
             <groupId>com.fazecast</groupId>
             <artifactId>jSerialComm</artifactId>
-            <version>1.3.11</version>
+            <version>2.5.0</version>
+            <!--<version>1.3.11</version>!-->
+
         </dependency>
+
+
+
+
+
+
+
+
+
 
         <!-- https://mvnrepository.com/artifact/org.apache.httpcomponents/httpclient -->
         <dependency>
@@ -97,13 +138,7 @@
             <version>4.3.0.RELEASE</version>
         </dependency>
 
-        <!-- https://mvnrepository.com/artifact/junit/junit -->
-        <dependency>
-            <groupId>junit</groupId>
-            <artifactId>junit</artifactId>
-            <version>4.12</version>
-            <scope>test</scope>
-        </dependency>
+
         <dependency>
             <groupId>org.eclipse.jetty.websocket</groupId>
             <artifactId>websocket-client</artifactId>
@@ -122,17 +157,21 @@
             <artifactId>gson</artifactId>
             <version>2.8.5</version>
         </dependency>
-        <!-- https://mvnrepository.com/artifact/junit/junit -->
+
         <dependency>
-            <groupId>junit</groupId>
-            <artifactId>junit</artifactId>
-            <version>4.12</version>
-            <scope>test</scope>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-security</artifactId>
         </dependency>
-
-
-
-
+        <dependency>
+            <groupId>org.springframework</groupId>
+            <artifactId>spring-messaging</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.jetbrains</groupId>
+            <artifactId>annotations</artifactId>
+            <version>17.0.0</version>
+            <scope>compile</scope>
+        </dependency>
     </dependencies>
 
     <properties>
@@ -141,70 +180,143 @@
 
 
     <build>
-        <finalName>${project.name}</finalName>
-
+        <finalName>lightcontrol</finalName>
         <plugins>
+
+            <plugin>
+                <groupId>org.codehaus.mojo</groupId>
+                <artifactId>versions-maven-plugin</artifactId>
+                <version>2.5</version>
+                <configuration>
+                    <generateBackupPoms>false</generateBackupPoms>
+                </configuration>
+            </plugin>
+
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-compiler-plugin</artifactId>
+                <version>3.8.0</version>
+                <configuration>
+                    <release>8</release>
+                </configuration>
+            </plugin>
+
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-surefire-plugin</artifactId>
+                <version>2.22.0</version>
+                <configuration>
+                    <argLine>
+                        --illegal-access=permit
+                    </argLine>
+                </configuration>
+            </plugin>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-failsafe-plugin</artifactId>
+                <version>2.22.0</version>
+                <configuration>
+                    <argLine>
+                        --illegal-access=permit
+                    </argLine>
+                </configuration>
+            </plugin>
             <plugin>
                 <groupId>org.springframework.boot</groupId>
                 <artifactId>spring-boot-maven-plugin</artifactId>
             </plugin>
+            <plugin>
+                <groupId>org.codehaus.mojo</groupId>
+                <artifactId>exec-maven-plugin</artifactId>
+                <executions>
+                    <execution>
+                        <id>scp upload</id>
+                        <phase>install</phase>
+                        <goals>
+                            <goal>exec</goal>
+                        </goals>
+                    </execution>
+                </executions>
+                <configuration>
+                    <executable>scp.sh</executable>
+                    <arguments>
+                        <argument>${repo-host}</argument>
+                        <argument>${repo-path}</argument>
+                        <argument>${version}</argument>
+                    </arguments>
+                </configuration>
+            </plugin>
         </plugins>
-        <extensions>
-            <!-- Enabling the use of FTP -->
-            <extension>
-                <groupId>org.apache.maven.wagon</groupId>
-                <artifactId>wagon-ftp</artifactId>
-                <version>1.0-beta-6</version>
-            </extension>
-        </extensions>
     </build>
 
 
-    <distributionManagement>
-        <repository>
-            <id>ftp-pi</id>
-            <url>${repo-url}</url>
-            <name>test</name>
-        </repository>
-
-    </distributionManagement>
-
     <profiles>
+
         <profile>
-            <id>hall</id>
+            <id>bathhall</id>
             <properties>
-                <repo-id>hall</repo-id>
-                <repo-url>ftp://192.168.1.6/home/pi/Desktop</repo-url>
+                <repo-host>192.168.1.38</repo-host>
+                <repo-path>/home/pi/java/</repo-path>
             </properties>
         </profile>
-        <profile>
-            <id>living</id>
-            <properties>
-                <repo-id>living</repo-id>
-                <repo-url>ftp://192.168.1.9/home/pi/Desktop</repo-url>
-            </properties>
-        </profile>
-        <profile>
-            <id>eating</id>
-            <properties>
-                <repo-id>eating</repo-id>
-                <repo-url>ftp://192.168.1.100/home/pi/Desktop</repo-url>
-            </properties>
-        </profile>
-        <profile>
-            <id>hallway</id>
-            <properties>
-                <repo-id>hallway</repo-id>
-                <repo-url>ftp://192.168.1.128/home/pi/Desktop</repo-url>
-            </properties>
-        </profile>
+
         <profile>
             <id>master</id>
             <properties>
-                <repo-id>master</repo-id>
-                <repo-url>ftp://192.168.1.30/home/pi/Desktop</repo-url>
+                <repo-host>192.168.1.30</repo-host>
+                <repo-path>/home/pi/java/</repo-path>
             </properties>
         </profile>
+
+
+        <profile>
+            <id>test</id>
+            <properties>
+                <repo-host>192.168.1.46</repo-host>
+                <repo-path>/home/pi/java/</repo-path>
+            </properties>
+        </profile>
+
+
+        <!-- <profile>
+             <id>hall</id>
+             <properties>
+                 <repo-id>hall</repo-id>
+                 <repo-host>192.168.1.6</repo-host>
+                 <repo-path>/home/pi/Desktop</repo-path>
+             </properties>
+         </profile>
+
+         <profile>
+             <id>living</id>
+             <properties>
+                 <repo-id>living</repo-id>
+                 <repo-url>ftp://192.168.1.9/home/pi/Desktop</repo-url>
+             </properties>
+         </profile>
+         <profile>
+             <id>eating</id>
+             <properties>
+                 <repo-id>eating</repo-id>
+                 <repo-url>ftp://192.168.1.100/home/pi/Desktop</repo-url>
+             </properties>
+         </profile>
+         <profile>
+             <id>bathhall</id>
+             <properties>
+                 <repo-id>hallway</repo-id>
+                 <repo-url>ftp://192.168.1.38/home/pi/Desktop</repo-url>
+             </properties>
+         </profile>
+         <profile>
+             <id>master</id>
+             <properties>
+                 <repo-id>master</repo-id>
+                 <repo-url>ftp://192.168.1.30/home/pi/Desktop</repo-url>
+             </properties>
+         </profile>
+
+         !-->
     </profiles>
 
 </project>
